--- a/src/main/resources/templates/events.html
+++ b/src/main/resources/templates/events.html
@@ -33,7 +33,7 @@
         <li class="nav-item"><a class="nav-link" href="/rac/news">News</a></li>
         <li class="nav-item"><a class="nav-link" href="/rac/podcast">Podcast</a></li>
         <li class="nav-item"><a class="nav-link" href="/rac/about">About</a></li>
-        <li class="nav-item" th:if="${isLoggedIn}"><a class="nav-link" href="/rac/admin">Admin</a></li>
+        <li class="nav-item" th:if="${isLoggedIn} and ${session.role} == 'admin'"><a class="nav-link" href="/rac/admin">Admin</a></li>
     </ul>
     <div class="user-menu" th:if="${isLoggedIn}">
         <div class="user-circle" onclick="toggleDropdownMenu()">
