--- a/src/main/resources/templates/homePage.html
+++ b/src/main/resources/templates/homePage.html
@@ -15,6 +15,14 @@
             width: 100%;
             max-width: 1200px;
             margin: auto;
+            margin-top: 5px; /* Add margin-top to create space between navbar and content */
+            margin-bottom: 40px; /* Add margin-bottom to create space between content and footer */
+        }
+        .cover-image {
+            width: 100%;
+            height: auto;
+            display: block;
+            margin-bottom: 20px;
         }
     </style>
 </head>
@@ -33,7 +41,7 @@
         <li class="nav-item"><a class="nav-link" href="/rac/news">News</a></li>
         <li class="nav-item"><a class="nav-link" href="/rac/podcast">Podcast</a></li>
         <li class="nav-item"><a class="nav-link" href="/rac/about">About</a></li>
-        <li class="nav-item" th:if="${isLoggedIn}"><a class="nav-link" href="/rac/admin">Admin</a></li>
+        <li class="nav-item" th:if="${isLoggedIn} and ${session.role} == 'admin'"><a class="nav-link" href="/rac/admin">Admin</a></li>
     </ul>
     <div class="user-menu" th:if="${isLoggedIn}">
         <div class="user-circle" onclick="toggleDropdownMenu()">
@@ -63,6 +71,7 @@
 </div>
 
 <div class="container">
+    <img src="/images/All.JPG" alt="Cover Image" class="cover-image">
     <h1>Welcome to Our Application!</h1>
     <p>Feel free to explore the features of our application!</p>
 </div>
