--- a/src/main/resources/templates/admin.html
+++ b/src/main/resources/templates/admin.html
@@ -52,6 +52,7 @@
             <li class="nav-item"><a class="nav-link" href="/rac/post/listpost">Events</a></li>
             <li class="nav-item"><a class="nav-link" href="/rac/news/listnews">News</a></li>
             <li class="nav-item"><a class="nav-link" href="/rac/podcast/listpodcast">Podcast</a></li>
+            <li class="nav-item"><a class="nav-link" href="/rac/user/listusers">Users</a></li>
         </ul>
     </div>
     <div class="content">
@@ -68,9 +69,10 @@
                     <th>Title</th>
                     <th>Date</th>
                     <th>Location</th>
+                    <th>Time</th>
+                    <th>Duration</th>
                     <th>Description</th>
                     <th>Category</th>
-                    <th>Status</th>
                     <th>Created By</th>
                     <th>Updated By</th>
                     <th>Image</th>
@@ -83,16 +85,17 @@
                     <td th:text="${post.title}"></td>
                     <td th:text="${post.date}"></td>
                     <td th:text="${post.location}"></td>
+                    <td th:text="${post.startTime}"></td>
+                    <td th:text="${post.durationHours}"></td>
                     <td class="description" th:text="${post.description}"></td>
                     <td th:text="${post.category}"></td>
-                    <td th:text="${post.status}"></td>
                     <td th:text="${post.createdBy}"></td>
                     <td th:text="${post.updatedBy}"></td>
                     <td>
                         <img th:src="${post.imageUrl}" class="img-thumbnail">
                     </td>
                     <td class="actions">
-                        <a th:href="@{/rac/post/edit/{id}(id=${post.id})}">Edit</a>
+                        <a th:href="@{/rac/post/edit/{id}(id=${post.id}, username=${session.user})}">Edit</a>
                         <a th:href="@{/rac/post/delete/{id}(id=${post.id})}"
                         onclick="return confirm('Are you sure?')">Delete</a>
                     </td>
