--- a/src/main/resources/templates/manageNews/newsadmin.html
+++ b/src/main/resources/templates/manageNews/newsadmin.html
@@ -52,6 +52,7 @@
             <li class="nav-item"><a class="nav-link" href="/rac/post/listpost">Events</a></li>
             <li class="nav-item"><a class="nav-link" href="/rac/news/listnews">News</a></li>
             <li class="nav-item"><a class="nav-link" href="/rac/podcast/listpodcast">Podcast</a></li>
+            <li class="nav-item"><a class="nav-link" href="/rac/user/listusers">Users</a></li>
         </ul>
     </div>
     <div class="content">
