--- a/src/main/resources/templates/manageUser/useradmin.html
+++ b/src/main/resources/templates/manageUser/useradmin.html
@@ -56,44 +56,36 @@
         </ul>
     </div>
     <div class="content">
-        <h2>Podcast Management</h2>
-        <a href="/rac/podcast/create">Create New Podcast</a>
+        <h2>User Management</h2>
+        <a href="/rac/user/create">Create New User</a>
         <div class="table-container">
-            <h5>Podcast</h5>
-        <table>
-            <thead>
-            <tr>
-                <th>#</th>
-                <th>Title</th>
-                <th>Description</th>
-                <th>Link</th>
-                <th>Created By</th>
-                <th>Updated By</th>
-                <th>Image</th>
-                <th>Actions</th>
-            </tr>
-            </thead>
-            <tbody>
-            <tr th:each="podcast, iterStat : ${podcast}">
-                <td th:text="${iterStat.index + 1}"></td>
-                <td th:text="${podcast.title}">Title</td>
-                <td class="description" th:text="${podcast.description}">Description</td>
-                <td><a th:href="${podcast.link}" target="_blank" th:text="${podcast.link}">Link</a></td>
-                <td th:text="${podcast.createdBy}"></td>
-                <td th:text="${podcast.updatedBy}"></td>
-                <td>
-                    <img th:if="${podcast.imageUrl}" th:src="${podcast.imageUrl}" alt="Podcast Image" class="img-thumbnail"/>
-                    <span th:if="${podcast.imageUrl == null}">No Image</span>
-                </td>
-                <td>
-                    <a class="btn" th:href="@{/rac/podcast/edit/{id}(id=${podcast.id})}">Edit</a>
-                    <a class="btn btn-danger" th:href="@{/rac/podcast/delete/{id}(id=${podcast.id})}" onclick="return confirm('Are you sure you want to delete this podcast?');">Delete</a>
-                </td>
-            </tr>
-            </tbody>
-        </table>
+            <h5>Users</h5>
+            <table>
+                <thead>
+                <tr>
+                    <th>#</th>
+                    <th>Username</th>
+                    <th>Email</th>
+                    <th>Full Name</th>
+                    <th>Phone Number</th>
+                    <th>Actions</th>
+                </tr>
+                </thead>
+                <tbody>
+                <tr th:each="user, iterStat : ${users}">
+                    <td th:text="${iterStat.index + 1}"></td>
+                    <td th:text="${user.userName}">Username</td>
+                    <td th:text="${user.email}">Email</td>
+                    <td th:text="${user.name}">Full Name</td>
+                    <td th:text="${user.phoneNumber}">Phone Number</td>
+                    <td class="actions">
+                        <a  th:href="@{/rac/user/delete/{id}(id=${user.id})}" onclick="return confirm('Are you sure you want to delete this user?');">Delete</a>
+                    </td>
+                </tr>
+                </tbody>
+            </table>
+        </div>
     </div>
-</div>
 </div>
 
 <footer class="footer">
