--- a/src/main/resources/templates/managePodcast/podcastadmin.html
+++ b/src/main/resources/templates/managePodcast/podcastadmin.html
@@ -86,8 +86,8 @@
                     <span th:if="${podcast.imageUrl == null}">No Image</span>
                 </td>
                 <td>
-                    <a class="btn" th:href="@{/rac/podcast/edit/{id}(id=${podcast.id})}">Edit</a>
-                    <a class="btn btn-danger" th:href="@{/rac/podcast/delete/{id}(id=${podcast.id})}" onclick="return confirm('Are you sure you want to delete this podcast?');">Delete</a>
+                    <a  th:href="@{/rac/podcast/edit/{id}(id=${podcast.id})}">Edit</a>
+                    <a  th:href="@{/rac/podcast/delete/{id}(id=${podcast.id})}" onclick="return confirm('Are you sure you want to delete this podcast?');">Delete</a>
                 </td>
             </tr>
             </tbody>
