time ,date ,status has been added,need to try for the location.

--- a/src/main/resources/templates/detail.html
+++ b/src/main/resources/templates/detail.html
@@ -147,7 +147,7 @@
 </div>
 
 <div class="container">
-    <div class="created-date"><strong>Created Date:</strong> <span th:text="${post.createdDate}">Created Date</span></div>
+    <div class="created-date"><strong>Created By:</strong> <span th:text="${post.createdBy}">Created Date</span></div>
     <div class="post-detail">
         <div class="post-header">
             <h1 th:text="${post.title}">Post Title</h1>
